--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,10 +15,11 @@
     "vue": "^3.5.6"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^2.0.2",
-    "@eslint/compat": "^1.1.1",
     "@acme/eslint-config": "workspace:*",
     "@acme/tailwindcss-config": "workspace:*",
+    "@chromatic-com/storybook": "^2.0.2",
+    "@eslint/compat": "^1.1.1",
+    "@storybook/addon-a11y": "^8.3.1",
     "@storybook/addon-essentials": "^8.3.1",
     "@storybook/addon-interactions": "^8.3.1",
     "@storybook/addon-links": "^8.3.1",
