feat: nuxt client app implementation

--- a/config/eslint/package.json
+++ b/config/eslint/package.json
@@ -2,9 +2,7 @@
   "name": "@acme/eslint-config",
   "version": "0.0.0",
   "private": true,
-  "files": [
-    "base.mjs"
-  ],
+  "files": ["."],
   "scripts": {
     "lint": "eslint . --fix"
   },
