feat: nuxt type checking, ui components relocation, clean up

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,17 +3,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -o",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "type-check": "nuxi typecheck",
     "lint": "eslint . --fix",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -24,6 +25,7 @@
     "eslint": "^9.10.0",
     "postcss-preset-env": "^10.0.3",
     "tailwindcss": "^3.4.12",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vue-tsc": "^2.1.6"
   }
 }
