--- a/config/eslint/package.json
+++ b/config/eslint/package.json
@@ -2,7 +2,9 @@
   "name": "@acme/eslint-config",
   "version": "0.0.0",
   "private": true,
-  "files": ["."],
+  "files": [
+    "."
+  ],
   "scripts": {
     "lint": "eslint . --fix"
   },
@@ -13,7 +15,6 @@
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^2.1.2",
-    "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vue": "^9.28.0",
