--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "exports": {
+    ".": "./src/components/index.ts",
     "./main.scss": "./src/assets/styles/main.scss",
     "./base.scss": "./src/assets/styles/base.scss",
     "./reset.scss": "./src/assets/styles/reset.scss"
@@ -24,21 +25,21 @@
     "@acme/tailwindcss-config": "workspace:*",
     "@chromatic-com/storybook": "^2.0.2",
     "@eslint/compat": "^1.1.1",
-    "@storybook/addon-a11y": "^8.3.1",
-    "@storybook/addon-essentials": "^8.3.1",
-    "@storybook/addon-interactions": "^8.3.1",
-    "@storybook/addon-links": "^8.3.1",
-    "@storybook/addon-mdx-gfm": "^8.3.1",
-    "@storybook/addon-onboarding": "^8.3.1",
-    "@storybook/blocks": "^8.3.1",
-    "@storybook/test": "^8.3.1",
-    "@storybook/vue3": "^8.3.1",
-    "@storybook/vue3-vite": "^8.3.1",
+    "@storybook/addon-a11y": "^8.3.2",
+    "@storybook/addon-essentials": "^8.3.2",
+    "@storybook/addon-interactions": "^8.3.2",
+    "@storybook/addon-links": "^8.3.2",
+    "@storybook/addon-mdx-gfm": "^8.3.2",
+    "@storybook/addon-onboarding": "^8.3.2",
+    "@storybook/blocks": "^8.3.2",
+    "@storybook/test": "^8.3.2",
+    "@storybook/vue3": "^8.3.2",
+    "@storybook/vue3-vite": "^8.3.2",
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.10.0",
     "postcss-preset-env": "^10.0.3",
-    "sass": "^1.79.1",
-    "storybook": "^8.3.1",
+    "sass": "^1.79.2",
+    "storybook": "^8.3.2",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
     "vite": "^5.4.6",
