--- a/config/tsconfig/package.json
+++ b/config/tsconfig/package.json
@@ -2,8 +2,5 @@
   "name": "@acme/tsconfig",
   "version": "0.0.0",
   "private": true,
-  "files": ["."],
-  "publishConfig": {
-    "access": "public"
-  }
+  "files": ["."]
 }
