--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "radix-vue": "^1.9.6",
     "vue": "^3.5.7"
   },
   "devDependencies": {
