--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,9 @@
     "./main.css": "./dist/assets/styles/main.css",
     "./main.scss": "./src/assets/styles/main.scss"
   },
-  "files": ["./src"],
+  "files": [
+    "./src"
+  ],
   "scripts": {
     "dev": "concurrently 'pnpm dev:styles' 'pnpm dev:storybook'",
     "dev:styles": "nodemon --watch 'src/assets/styles/*' -e scss --exec 'run-s compile:sass compile:tailwind'",
@@ -46,7 +48,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "postcss-preset-env": "^10.0.3",
-    "sass": "^1.79.2",
+    "sass": "^1.79.3",
     "storybook": "^8.3.2",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
