--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -24,6 +24,7 @@
     "@acme/ui": "workspace:*",
     "eslint": "^9.11.0",
     "postcss-preset-env": "^10.0.3",
+    "sass": "^1.79.3",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
     "vue-tsc": "^2.1.6"
