refactor: button styling and component props
- implement css variables for button
- update related button implementation

BREAKING: `Button` component's default size is now `base`, and variant is `default`.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "dev": "concurrently 'pnpm dev:styles' 'pnpm dev:storybook'",
-    "dev:styles": "nodemon --watch 'src/assets/styles/*' -e scss --exec 'run-s compile:sass compile:tailwind'",
+    "dev:styles": "nodemon --watch 'src/assets/styles/*' -e scss --exec 'run-s compile:sass \"compile:tailwind --minify\"'",
     "dev:storybook": "storybook dev -p 6006",
     "build": "run-s build:styles",
     "build:styles": "run-s compile:sass 'compile:tailwind --minify'",
