--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,40 +3,56 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "exports": {
+    ".": "./src/components/index.ts",
+    "./main.css": "./dist/assets/styles/main.css",
+    "./main.scss": "./src/assets/styles/main.scss"
+  },
+  "files": [
+    "./src"
+  ],
   "scripts": {
-    "dev": "storybook dev -p 6006",
-    "build": "storybook build",
-    "dev:vite": "vite",
-    "build:vite": "vue-tsc -b && vite build",
-    "preview:vite": "vite preview",
+    "dev": "concurrently 'pnpm dev:styles' 'pnpm dev:storybook'",
+    "dev:styles": "nodemon --watch 'src/assets/styles/*' -e scss --exec 'run-s compile:sass \"compile:tailwind --minify\"'",
+    "dev:storybook": "storybook dev -p 6006",
+    "build": "run-s build:styles",
+    "build:styles": "run-s compile:sass 'compile:tailwind --minify'",
+    "build:storybook": "storybook build",
+    "compile:sass": "sass --no-source-map src/assets/styles/main.scss dist/assets/styles/main.css",
+    "compile:tailwind": "tailwindcss -i dist/assets/styles/main.css -o dist/assets/styles/main.css",
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.6"
+    "radix-vue": "^1.9.6",
+    "vue": "^3.5.7"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:*",
     "@acme/tailwindcss-config": "workspace:*",
     "@chromatic-com/storybook": "^2.0.2",
     "@eslint/compat": "^1.1.1",
-    "@storybook/addon-a11y": "^8.3.1",
-    "@storybook/addon-essentials": "^8.3.1",
-    "@storybook/addon-interactions": "^8.3.1",
-    "@storybook/addon-links": "^8.3.1",
-    "@storybook/addon-mdx-gfm": "^8.3.1",
-    "@storybook/addon-onboarding": "^8.3.1",
-    "@storybook/blocks": "^8.3.1",
-    "@storybook/test": "^8.3.1",
-    "@storybook/vue3": "^8.3.1",
-    "@storybook/vue3-vite": "^8.3.1",
+    "@storybook/addon-a11y": "^8.3.2",
+    "@storybook/addon-essentials": "^8.3.2",
+    "@storybook/addon-interactions": "^8.3.2",
+    "@storybook/addon-links": "^8.3.2",
+    "@storybook/addon-mdx-gfm": "^8.3.2",
+    "@storybook/addon-onboarding": "^8.3.2",
+    "@storybook/blocks": "^8.3.2",
+    "@storybook/test": "^8.3.2",
+    "@storybook/vue3": "^8.3.2",
+    "@storybook/vue3-vite": "^8.3.2",
     "@vitejs/plugin-vue": "^5.1.4",
-    "eslint": "^9.10.0",
+    "concurrently": "^9.0.1",
+    "eslint": "^9.11.0",
+    "nodemon": "^3.1.7",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.47",
     "postcss-preset-env": "^10.0.3",
-    "sass": "^1.79.1",
-    "storybook": "^8.3.1",
+    "sass": "^1.79.3",
+    "storybook": "^8.3.2",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
-    "vite": "^5.4.6",
+    "vite": "^5.4.7",
     "vue-component-meta": "^2.1.6",
     "vue-tsc": "^2.1.6"
   }
