--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,10 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".nuxt/**", "!.nuxt/cache/**", "dist/**"]
     },
+    "preview": {
+      "cache": false,
+      "persistent": true
+    },
     "type-check": {
       "dependsOn": ["^transit"]
     },
