--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "turbo lint lint:root",
     "lint:root": "eslint \"*.{js,cjs,mjs,ts,cts,mts,vue}\" --fix",
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,cts,mts,tsx,vue,md,json,html,css,scss}\" -l -u",
+    "analyze": "turbo analyze",
     "lf": "pnpm lint && pnpm format",
     "clean": "rimraf --glob **/dist **/.nuxt **/.turbo **/.output **/node_modules/.vite **/node_modules/.cache **/inspect **/storybook-static **/*.tsbuildinfo",
     "clean:all": "pnpm clean && rimraf --glob **/node_modules"
