--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,8 @@
     "build:storybook": "storybook build",
     "compile:sass": "sass --no-source-map src/assets/styles/main.scss dist/assets/styles/main.css",
     "compile:tailwind": "tailwindcss -i dist/assets/styles/main.css -o dist/assets/styles/main.css",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "analyze": "vue-mess-detector analyze"
   },
   "dependencies": {
     "radix-vue": "^1.9.6",
@@ -52,8 +53,9 @@
     "storybook": "^8.3.3",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
-    "vite": "^5.4.7",
+    "vite": "^5.4.8",
     "vue-component-meta": "^2.1.6",
+    "vue-mess-detector": "^0.55.0",
     "vue-tsc": "^2.1.6"
   }
 }
