--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "turbo build",
     "preview": "turbo preview",
     "type-check": "turbo type-check",
-    "lint": "turbo lint lint:root",
-    "lint:root": "eslint \"*.{js,cjs,mjs,ts,cts,mts,vue}\" --fix",
-    "format": "prettier --write \"**/*.{js,cjs,mjs,ts,cts,mts,tsx,vue,md,json,html,css,scss}\" -l -u",
     "analyze": "turbo analyze",
+    "lint": "turbo lint lint:root",
+    "lint:root": "eslint \"*.{js,cjs,mjs,ts,cts,mts}\" --fix",
+    "format": "prettier --write \"**/*.{js,cjs,mjs,ts,cts,mts,tsx,vue,md,json,html,css,scss}\" -l -u",
     "lf": "pnpm lint && pnpm format",
     "clean": "rimraf --glob **/dist **/.nuxt **/.turbo **/.output **/node_modules/.vite **/node_modules/.cache **/inspect **/storybook-static **/*.tsbuildinfo",
     "clean:all": "pnpm clean && rimraf --glob **/node_modules"
@@ -20,7 +20,7 @@
     "eslint": "^9.11.1",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "turbo": "^2.1.2",
+    "turbo": "^2.1.3",
     "typescript": "^5.6.2"
   },
   "packageManager": "pnpm@9.10.0",
