--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,27 +21,27 @@
     "compile:sass": "sass --no-source-map src/assets/styles/main.scss dist/assets/styles/main.css",
     "compile:tailwind": "tailwindcss -i dist/assets/styles/main.css -o dist/assets/styles/main.css",
     "lint": "eslint . --fix",
-    "analyze": "vue-mess-detector analyze"
+    "analyze": "vue-mess-detector analyze ./src/components"
   },
   "dependencies": {
     "radix-vue": "^1.9.6",
-    "vue": "^3.5.8"
+    "vue": "^3.5.10"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:*",
     "@acme/tailwindcss-config": "workspace:*",
     "@chromatic-com/storybook": "^2.0.2",
     "@eslint/compat": "^1.1.1",
-    "@storybook/addon-a11y": "^8.3.3",
-    "@storybook/addon-essentials": "^8.3.3",
-    "@storybook/addon-interactions": "^8.3.3",
-    "@storybook/addon-links": "^8.3.3",
-    "@storybook/addon-mdx-gfm": "^8.3.3",
-    "@storybook/addon-onboarding": "^8.3.3",
-    "@storybook/blocks": "^8.3.3",
-    "@storybook/test": "^8.3.3",
-    "@storybook/vue3": "^8.3.3",
-    "@storybook/vue3-vite": "^8.3.3",
+    "@storybook/addon-a11y": "^8.3.4",
+    "@storybook/addon-essentials": "^8.3.4",
+    "@storybook/addon-interactions": "^8.3.4",
+    "@storybook/addon-links": "^8.3.4",
+    "@storybook/addon-mdx-gfm": "^8.3.4",
+    "@storybook/addon-onboarding": "^8.3.4",
+    "@storybook/blocks": "^8.3.4",
+    "@storybook/test": "^8.3.4",
+    "@storybook/vue3": "^8.3.4",
+    "@storybook/vue3-vite": "^8.3.4",
     "@vitejs/plugin-vue": "^5.1.4",
     "concurrently": "^9.0.1",
     "eslint": "^9.11.1",
@@ -49,13 +49,13 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "postcss-preset-env": "^10.0.5",
-    "sass": "^1.79.3",
-    "storybook": "^8.3.3",
+    "sass": "^1.79.4",
+    "storybook": "^8.3.4",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
     "vue-component-meta": "^2.1.6",
-    "vue-mess-detector": "^0.55.0",
+    "vue-mess-detector": "^0.59.0",
     "vue-tsc": "^2.1.6"
   }
 }
