chore: update package versions and recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
     "Vue.volar",
-    "webmania.vue-mess-detector"
+    "webmania.vue-mess-detector",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode"
   ]
 }
